# internal/expedition/handler.go
@@ -12,6 +12,33 @@ type ExpeditionHandler struct{}
 
 var expeditionService = NewExpeditionService()
 
+// @Summary idから遠征記録詳細を取得
+// @Description 遠征記録詳細情報を取得
+// @Tags expedition
+// @Security BearerAuth
+// @Param expeditionId path uint true "expeditionId"
+// @Success 200 {object} utils.ApiResponse[GetExpeditionDetailResponse] "成功"
+// @Failure 400 {object} utils.BasicResponse "リクエストエラー"
+// @Failure 403 {object} utils.BasicResponse "認証エラー"
+// @Failure 404 {object} utils.BasicResponse "not foundエラー"
+// @Failure 500 {object} utils.BasicResponse "内部エラー"
+// @Router /api/expedition/{expeditionId} [get]
+func (h *ExpeditionHandler) GetExpeditionDetail(c *gin.Context) {
+	var request GetExpeditionDetailRequest
+	if err := c.ShouldBindUri(&request); err != nil {
+		utils.ErrorResponse[any](c, http.StatusBadRequest, "リクエストに不備があります。")
+	}
+	expeditionDetail, err := expeditionService.GetExpeditionDetailService(&request)
+	if err != nil {
+		if customErr, ok := err.(*utils.CustomError); ok {
+			utils.ErrorResponse[any](c, customErr.Code, customErr.Error())
+			return
+		}
+	}
+
+	utils.SuccessResponse[GetExpeditionDetailResponse](c, http.StatusOK, *expeditionDetail, "遠征記録詳細取得に成功しました")
+}
+
 // @Summary 遠征記録を作成
 // @Description 遠征、出費、試合、訪れた施設の情報を保存する。
 // @Tags expedition
@@ -35,7 +62,6 @@ func (h *ExpeditionHandler) CreateExpedition(c *gin.Context) {
 	}
 
 	utils.SuccessResponse[any](c, http.StatusOK, nil, "遠征記録作成に成功しました")
-
 }
 
 // @Summary 遠征記録を更新
