# pkg/router/router.go
@@ -67,6 +67,7 @@ func SetupRouter(ik *imagekit.ImageKit) *gin.Engine {
 
 		protectedExpeditionGroup := protectedGroup.Group("/expedition")
 		{
+			protectedExpeditionGroup.GET("/:expeditionId", expeditionHandler.GetExpeditionDetail)
 			protectedExpeditionGroup.POST("/create", expeditionHandler.CreateExpedition)
 			protectedExpeditionGroup.PUT("/update/:expeditionId", func(c *gin.Context) {
 				expeditionHandler.UpdateExpedition(c, ik)
